--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Portal devJobs con nodeJS, Handlebars Mongoose",
   "main": "index.js",
   "scripts": {
-    "start" : "nodemon ./index"
+    "start": "nodemon ./index"
   },
   "repository": {
     "type": "git",
@@ -17,8 +17,15 @@
   },
   "homepage": "https://github.com/ivanromeroo11/devJobs#readme",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
-    "nodemon": "^3.1.9"
+    "mongoose": "^8.12.1",
+    "nodemon": "^3.1.9",
+    "session": "^0.1.0",
+    "shortid": "^2.2.17",
+    "slug": "^10.0.0"
   }
 }
