--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.1",
     "mongoose": "^8.12.1",
     "nodemon": "^3.1.9",
+    "save": "^2.9.0",
     "session": "^0.1.0",
     "shortid": "^2.2.17",
     "slug": "^10.0.0"
